Room is in progress

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,6 +1,8 @@
 @import 'src/assets/styles/pages/Homepage';
+@import 'src/assets/styles/pages/CreateRoom';
 @import 'src/assets/styles/components/home/Button';
 @import 'src/assets/styles/components/user/LoginRegisterModal';
+@import 'src/assets/styles/components/home/InputText';
 
 body, html, #root, .App {
   height:100%;
