Start game and display deck

--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -5,6 +5,7 @@
 @import 'src/assets/styles/components/room/UserInRoom';
 @import 'src/assets/styles/components/user/LoginRegisterModal';
 @import 'src/assets/styles/components/home/InputText';
+@import 'src/assets/styles/components/deck/Deck';
 
 body, html, #root, .App {
   height:100%;
