--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'src/assets/styles/components/user/LoginRegisterModal';
 @import 'src/assets/styles/components/home/InputText';
 @import 'src/assets/styles/components/deck/Deck';
+@import 'src/assets/styles/components/board/Board';
 
 body, html, #root, .App {
   height:100%;
