--- a/src/assets/styles/components/deck/CardItem.scss
+++ b/src/assets/styles/components/deck/CardItem.scss
@@ -1,10 +1,13 @@
 .card {
     position: relative;
     border-radius: 7px;
-    box-shadow: 0px 0px 10px rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
     width: 100px;
     height: 150px;
+
+    &.in-deck {
+        box-shadow: 0px 0px 10px rgb(0, 0, 0);
+    }
 
     .card-value {
         position: absolute;
