--- a/src/assets/styles/components/deck/Deck.scss
+++ b/src/assets/styles/components/deck/Deck.scss
@@ -1,10 +1,11 @@
 @import 'src/assets/styles/components/deck/CardItem';
 
 .deck {
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
     display: flex;
+    bottom: -35%;
     justify-content: center;
     align-items: center;
     padding: 0 10px;
