--- a/src/assets/styles/components/board/Board.scss
+++ b/src/assets/styles/components/board/Board.scss
@@ -23,6 +23,7 @@
       justify-content: center;
       align-items: center;
       position: relative;
+      z-index:20;
 
       .card-item:not(:first-child) {
         margin-top: -130px;
