--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -7,6 +7,7 @@
 @import 'src/assets/styles/components/home/InputText';
 @import 'src/assets/styles/components/deck/Deck';
 @import 'src/assets/styles/components/board/Board';
+@import 'src/assets/styles/components/win/Classement';
 
 body, html, #root, .App {
   height:100%;
