--- a/src/assets/styles/components/home/Button.scss
+++ b/src/assets/styles/components/home/Button.scss
@@ -29,6 +29,13 @@
         transform: translateY(6px);
         transition: all 0.2s;
       }
+
+      &:disabled {
+        background-color: rgb(128, 128, 128);
+        border: 2px solid rgb(101, 101, 101);
+        box-shadow: 0px 6px 0px rgb(101, 101, 101);
+        cursor: not-allowed;
+      }
     }
   }
 }
