--- a/src/assets/styles/components/room/UserInRoom.scss
+++ b/src/assets/styles/components/room/UserInRoom.scss
@@ -48,6 +48,7 @@
       filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.50));
     }
   }
+
   ul {
     z-index: 2;
     display: flex;
@@ -60,6 +61,7 @@
     margin-top: -2px;
     padding-left: 100px;
     padding-right: 10px;
+
     li {
       width: 110px;
       height: 100px;
@@ -75,7 +77,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      color: rgba(141, 70, 5, 0.67);
       text-align: center;
       font-family: Darumadrop One;
       font-style: normal;
@@ -85,6 +86,10 @@
       word-break: break-all;
       text-overflow: ellipsis;
       overflow: hidden;
+
+      &.offline {
+        background-color: rgb(128, 125, 123);
+      }
 
       &.active {
         border: 5px solid #e23516;
