--- a/src/assets/styles/pages/Room.scss
+++ b/src/assets/styles/pages/Room.scss
@@ -115,6 +115,13 @@
       box-shadow: 0px 6px 0px rgb(101, 101, 101);
       pointer-events: none;
     }
+
+    &:first-child {
+      color: rgba(255, 255, 255, 1);
+      background-color: rgb(214, 52, 34);
+      border: 2px solid rgb(150, 17, 17);
+      box-shadow: 0px 6px 0px rgb(150, 17, 17);
+    }
   }
 }
 
