--- a/src/assets/styles/components/board/Board.scss
+++ b/src/assets/styles/components/board/Board.scss
@@ -2,6 +2,18 @@
   width:100%;
   position: absolute;
   top: 30%;
+  height: auto;
+  z-index: 30;
+
+  //.board-place-cards {
+  //  position: absolute;
+  //  top: 50%;
+  //  left: 50%;
+  //  transform: translate(-50%, -50%);
+  //  width: 50%;
+  //  height: 100%;
+  //  z-index: 25;
+  //}
 
   .board-all-slots {
     display: flex;
