--- a/src/assets/styles/pages/Room.scss
+++ b/src/assets/styles/pages/Room.scss
@@ -132,3 +132,10 @@
     height:100%;
   }
 }
+
+.card-played {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translateX(-50%);
+}
